@@ -289,6 +289,13 @@ The data-structure refers to a few capitalized comments:
 =over 4
 =item MARKUP
 The output markup used for text.  Currently only "html" is supported.
+
+=item META
+Distribution meta-data, as provided by its F<MYMETA.json>.
+
+=item SAFE
+No HTML, but does never contain any HTML conflicting data.  Is
+does not contain links.
 =back
 
 =subsection root
@@ -296,14 +303,14 @@ The output markup used for text.  Currently only "html" is supported.
 The root:
 
   { "project": "MailBox",                      # MARKUP
-    "distribution": "Mail-Box",
-    "version": "4.01_12",
+    "distribution": "Mail-Box",                # SAFE
+    "version": "4.01_12",                      # SAFE
 
     "generated_by" : {
-       "program": "oodist",
-       "program_version": "3.14",
-       "oodoc_version": "3.00",
-       "created": "2025-07-27 16:30"
+       "program": "oodist",                    # SAFE
+       "program_version": "3.14",              # SAFE
+       "oodoc_version": "3.00",                # SAFE
+       "created": "2025-07-27 16:30"           # SAFE
     },
     "distributions": {
        "Mail-Box": { ... },                    # META
@@ -311,12 +318,12 @@ The root:
     },
     "manuals": {
        "Mail::Message": "id42",                # REF
-       "Mail::Message::Field": "id1023",       # REF
+       "Mail::Message::Field": "id1023"        # REF
     },
     "index": {
-       "id42": { ... }
+       "id42": { ... },
        "id1023": { ... }
-    },
+    }
   }
 
 =subsection Distributions
@@ -327,9 +334,9 @@ which is part of the project.
 
 Some of the important fields:
 
-  { "name": "Mail-Box",
+  { "name": "Mail-Box",                        # SAFE
     "abstract": "Manage a mailbox",            # MARKUP
-    "version": "3.14"
+    "version": "3.14"                          # SAFE
   }
 
 Take a look at the C<MYMETA.json> or C<META.json> for any module which is produced
@@ -341,8 +348,8 @@ with OODoc, for instance OODoc itself at F<https://metacpan.org/XXX>
     "name": "Mail::Box",                       # MARKUP
     "version": "3.14",                         # or undef
     "title": "Manage a mailbox",               # MARKUP
-    "package": "lib/Mail/Box.pm",
-    "distribution": "Mail-Box",
+    "package": "lib/Mail/Box.pm",              # SAFE
+    "distribution": "Mail-Box",                # SAFE
     "is_pure_pod": false,                      # BOOLEAN
     "chapters": [ REF, ... ]
   }
@@ -358,11 +365,11 @@ a list of nested blocks.
 
 Each (text) block has same features:
 
-  { "id": REF,
+  { "id": REF,                                 # SAFE
     "name": "Constructors",                    # MARKUP
-    "level": 2,
-    "type": "section",
-    "extends": REFERENCE,
+    "level": 2,                                # SAFE
+    "type": "section",                         # SAFE
+    "extends": REFERENCE,                      #XXX TODO
     "intro": "Intro to this section.",         # MARKUP
     "examples": [ REF, ... ],
     "subroutines": [ REF, ... ],
@@ -379,20 +386,20 @@ Subroutines will also have specific descriptions and examples.
 There are a few types of subroutines:
 
 =over 4
-=item C<function>, the classical 'sub'
-=item C<i_method>, instance method (in the docs also as C<=method>)
-=item C<c_method>, class method
-=item C<ci_method>, both usable as class or instance method
-=item C<overload>, describes overloading
-=item C<tie>, tied interface
+=item * C<function>, the classical 'sub'
+=item * C<i_method>, instance method (in the docs also as C<=method>)
+=item * C<c_method>, class method
+=item * C<ci_method>, both usable as class or instance method
+=item * C<overload>, describes overloading
+=item * C<tie>, tied interface
 =back
 
 Each subroutine looks like this:
 
-  { "id": REF,
+  { "id": REF,                               # SAFE
     "name": "producePages",                  # MARKUP
     "call": "$obj->producePages()" ],        # MARKUP
-    "type": "i_method",
+    "type": "i_method",                      # MARKUP
     "intro": "Create the manual ...",        # MARKUP
     "examples": [ REF, ... ],
     "options: [ REF, ... ],
@@ -404,18 +411,18 @@ Each subroutine looks like this:
 Most subroutine forms can have options.  They are passed as
 list sorted by name.
 
-  { "id": REF,
+  { "id": REF,                               # SAFE
     "name": "beautify",                      # MARKUP
-    "type": "option",
+    "type": "option",                        # SAFE
     "params": "true|false",                  # MARKUP
     "intro": "Make the output better"        # MARKUP
   }
 
 The defaults look like this:
 
-  { "id": REF,
+  { "id": REF,                               # SAFE
     "name": "beautify",                      # MARKUP
-    "type": "default",
+    "type": "default",                       # SAFE
     "value": "<true>",                       # MARKUP
   }
 
@@ -426,9 +433,9 @@ The option is required when the default value is C<< <required> >>.
 Every block of text, and every subroutine can have a number of
 examples.  Examples do not always have a name.
 
-  { "id": REF,
+  { "id": REF,                               # SAFE
     "name": "how to produce pages",          # MARKUP
-    "type": "example",
+    "type": "example",                       # SAFE
     "intro": "Like this"                     # MARKUP
   }
 
@@ -439,10 +446,10 @@ sorted errors first, then by description text.  Other types of
 diagnostics will be added soon, to match the levels offered by
 M<Log::Report>.
 
-  { "id": REF,
-    "type": "error" or "warning",
-    "name": "Missing ...",                  # MARKUP
-    "intro: "This error is shown when...",  # MARKUP
+  { "id": REF,                               # SAFE
+    "type": "error"/"warning"/"info"...,     # SAFE
+    "name": "Missing ...",                   # MARKUP
+    "intro: "This error is shown when...",   # MARKUP
     "subroutine": REF,
   }
 
