@@ -18,8 +18,9 @@ version 3.01:
 	- parser add markup P<>
 	- parser more documentation
 	- link to metacpan.org, not search.cpan.org
-	- parser auto-P
-	- add other Log::Report levels to diagnostics: info, notice, alert
+	- parser auto-P<>
+	- add other Log::Report levels to diagnostics: info, notice, alert, failure
+	- documentation improvements
 
 version 3.00: Sat  2 Aug 14:59:32 CEST 2025
 
